--- a/BulkyWebApp/appsettings.json
+++ b/BulkyWebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnetion": "server=DESKTOP-J5718VE\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
